syntax = "proto3";

package io.seata.protocol.protobuf;

import "protocol/transcation/abstractGlobalEndRequest.proto";
import "protocol/transcation/globalStatus.proto";

option java_multiple_files = true;
option java_outer_classname = "GlobalReportRequest";
option java_package = "io.seata.serializer.protobuf.generated";

message GlobalReportRequestProto {
    AbstractGlobalEndRequestProto abstractGlobalEndRequest = 1;
    GlobalStatusProto globalStatus = 2;
}