syntax = "proto3";

package io.seata.protocol.protobuf;

import "protocol/transcation/abstractGlobalEndRequest.proto";

option java_multiple_files = true;
option java_outer_classname = "GlobalRollbackRequest";
option java_package = "io.seata.serializer.protobuf.generated";

message GlobalRollbackRequestProto {
    AbstractGlobalEndRequestProto abstractGlobalEndRequest = 1;
}