syntax = "proto3";

package io.seata.protocol.protobuf;

import "protocol/transcation/abstractGlobalEndResponse.proto";

option java_multiple_files = true;
option java_outer_classname = "GlobalStatusResponse";
option java_package = "io.seata.serializer.protobuf.generated";

message GlobalStatusResponseProto {
    AbstractGlobalEndResponseProto abstractGlobalEndResponse = 1;
}